--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.4.0",
     "framer-motion": "^6.5.1",
     "node-sass": "8.0",
     "react": "^18.2.0",
@@ -41,7 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "tailwindcss": "^3.3.3"
-  }
+  "proxy": "http://172.10.5.136:443"
 }
