--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^6.5.1",
     "node-sass": "8.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.14.1",
