--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "@svgr/cli": "^8.0.1",
     "tailwindcss": "^3.3.3"
   }
