--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "node-sass": "8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^3.11.0",
+    "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/icons-ph": "^1.2.4",
     "@iconify/react": "^4.1.1",
     "@svgr/cli": "^8.0.1",
     "tailwindcss": "^3.3.3"
