--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -18,7 +19,7 @@
     "react-chrono": "^2.2.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^3.11.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -44,5 +45,11 @@
       "last 1 safari version"
     ]
   },
+  "devDependencies": {
+    "@iconify/icons-ph": "^1.2.4",
+    "@iconify/react": "^4.1.1",
+    "@svgr/cli": "^8.0.1",
+    "tailwindcss": "^3.3.3"
+  }
   "proxy": "http://172.10.5.136:443"
 }
