--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "framer-motion": "^6.5.1",
+    "howler": "^2.2.3",
     "node-sass": "8.0",
     "react": "^18.2.0",
     "react-chrono": "^2.2.2",
